--- a/themes/my_hooligan/stylesheets/css/style.css
+++ b/themes/my_hooligan/stylesheets/css/style.css
@@ -277,5 +277,14 @@ a.btn:hover, a.btn.disabled:hover {
 .post > .title::before {
   content: "> "; }
 
+.post > .title {
+  padding-bottom: 5px; }
+
 ul, ol {
   margin-bottom: 0px; }
+
+h1, h2 {
+  margin-top: 15px; }
+
+h1:first-child, h2:first-child {
+  margin-top: 0px; }
